--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
                                 <p class="card-description">A cute and feature rich Discord bot.</p>
                             </div>
                             <div class="card-links">
-                                <a href="#" class="discord"></a>
-                                <a href="#" class="docs"></a>
-                                <a href="#" class="url"></a>
+                                <a href="https://discord.gg/FVqbtGu" class="discord"></a>
+                                <a href="https://deivu.github.io/Kashima/" class="docs"></a>
+                                <a href="https://kashima.saya.moe/" class="url"></a>
                             </div>
                         </div>
                     </div>
@@ -296,6 +296,8 @@
         <footer>
             <p id="copyright" class="footertitle"> © 2018 ShipgirlProject</p>
             <div class="footerlinks">
+                <a href="https://github.com/shipgirlproject">GitHub</a>
+                <a href="https://discord.gg/FVqbtGu">Discord</a>
                 <a href="privacy.html">Privacy</a>
                 <a href="terms.html">Terms</a>
             </div>
