--- a/privacy.html
+++ b/privacy.html
@@ -76,6 +76,8 @@
         <footer>
             <p id="copyright" class="footertitle"> © 2018 ShipgirlProject</p>
             <div class="footerlinks">
+                <a href="https://github.com/shipgirlproject">GitHub</a>
+                <a href="https://discord.gg/FVqbtGu">Discord</a>
                 <a href="privacy.html">Privacy</a>
                 <a href="terms.html">Terms</a>
             </div>
