--- a/index.html
+++ b/index.html
@@ -260,10 +260,10 @@
                             <div>
                                 <div class="card-title">
                                     <h2>Yanga</h2>
-                                    <p>Developer</p>
+                                    <p>Server Administrator</p>
                                 </div>
                                 <p class="card-description">
-                                    [Did not respond to request for description]
+                                    Think lots do nothing.
                                 </p>
                             </div>
                             <div class="card-links">
