--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                             </div>
                             <div class="card-links">
                                 <a href="https://github.com/shipgirlproject/Shoukaku" class="github"></a>
-                                <a href="https://shoukaku.shipgirl.moe/" class="docs"></a>
+                                <a href="https://guide.shoukaku.shipgirl.moe/" class="docs"></a>
                             </div>
                         </div>
                     </div>
